<resources>
    <string name="app_name">myCalculator</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="divide">/</string>
    <string name="mul">*</string>
    <string name="min">-</string>
    <string name="num0">0</string>
    <string name="clr">Clr</string>
    <string name="Plus">+</string>
    <string name="Equals">=</string>
    <string name="decimal">.</string>

</resources>