<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/Output"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"

        android:textSize="34sp"
        android:gravity="bottom|end"

        />

    <View
        android:layout_width="365dp"
        android:layout_height="3dp"
        android:background="@color/black"
        android:layout_marginBottom="3dp"
        android:layout_gravity="center_horizontal"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp"
        >


        <Button
            android:layout_margin="2dp"
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:textColor="@color/white"
            android:text="@string/n7"
            android:background="@drawable/borders"
            app:backgroundTint="@color/black"
            android:textSize="25sp"
            />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/n8"
            android:background="@drawable/borders"
            app:backgroundTint="@color/black"
            android:textSize="25sp"



            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/n9"
            android:background="@drawable/borders"
            app:backgroundTint="@color/black"
            android:textSize="25sp"



            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/button_Divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/divide"
            android:background="@drawable/borders"
            app:backgroundTint="@color/black"
            android:textSize="25sp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp"
        >


        <Button
            android:layout_margin="2dp"
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/n4"
            android:background="@drawable/borders"
            app:backgroundTint="@color/black"
            android:textSize="25sp"



            />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/n5"
            android:background="@drawable/borders"
            app:backgroundTint="@color/black"
            android:textSize="25sp"



            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/n6"
            android:background="@drawable/borders"
            app:backgroundTint="@color/black"
            android:textSize="25sp"



            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/button_Mul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/mul"
            android:background="@drawable/borders"
            app:backgroundTint="@color/black"
            android:textSize="25sp"



            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >






    </LinearLayout>





</LinearLayout>